Fix button align on mobile pwa

--- a/web/css/index.css
+++ b/web/css/index.css
@@ -229,6 +229,9 @@ html {
     background-color: var(--md-sys-color-surface);
     padding: 24px;
     border-radius: 28px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
 }
 .dialog-title {
     padding-bottom: 16px;
