--- a/web/css/pwa.css
+++ b/web/css/pwa.css
@@ -52,8 +52,11 @@ summary {
     display: none;
 }
 .modal .knopf {
-    margin-bottom: 5px;
+    margin-bottom: 10px;
 }
 .colorpicker {
     margin-bottom: 24px;
+}
+.pwa #addbuttons {
+    gap: 0;
 }
